# utilmaths

./: README.md  meson.build  tests.cpp  utilmaths.cpp
include/: utilmaths.h
